
* SOLR-16293: Luke request fails for document with a binary field (Kevin Risden)

* SOLR-16477: Collection RENAME api creates broken alias (Alex Deparvu via Kevin Risden)

* SOLR-16274: HEAD request for managed resource returns 500 Server Error (Kevin Risden)

* SOLR-13219: Fix NPE in FieldLengthFeature with non-stored/missing fields (Nick Veenhof, Tomasz Elendt)

Optimizations
---------------------
* SOLR-16555: SolrIndexSearcher - FilterCache intersections/andNot should not clone bitsets repeatedly (Kevin Risden, David Smiley)

Other Changes
---------------------
* SOLR-16141: Upgrade Apache Tika to 1.28.4 (Kevin Risden)

* SOLR-16324: Upgrade commons-configuration2 to 2.8.0 and commons-text to 1.9 (Kevin Risden)

* SOLR-16332: Upgrade Jetty to 9.4.48.v20220622 (Kevin Risden)

* SOLR-16626, SOLR-16424: Upgrade to Netty 4.1.87.Final (Kevin Risden, janhoy)

* SOLR-16421: Upgrade Apache Calcite to 1.32.0 and Avatica to 1.22.0 (Kevin Risden)

* SOLR-16464: Upgrade commons-text to 1.10.0 (Kevin Risden)

==================  8.11.2 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

Bug Fixes
---------------------
* SOLR-15871: Update Log4J to 2.17.1 (weidongkl via janhoy)

* SOLR-15854: Let RealtimeGet component support negative filters (Tomás Fernández Löbbe)

* SOLR-15961: Fix bug in PKIAuthenticationPlugin that can cause a request to fail with 401 Unauthorized instead
  of re-fetching expired remote keys from other nodes. (Tomás Fernández Löbbe)

* SOLR-15558: Don't wait for zombie processes to exit when stopping. (Colvin Cowie)

* SOLR-15587: Don't use the UrlScheme singleton on the client-side to determine cluster's scheme,
  only get from ClusterState provider impl (Timothy Potter)

* SOLR-14569: Configuring a shardHandlerFactory on the /select requestHandler results in HTTP 401 when searching on alias
  in secured Solr. (Isabelle Giguere, Jason Gerlowski, Anshum Gupta, Mark Mark Miller)
